Added thumbs up and thumbs down buttons. Added new icons for comments.

--- a/src/tips.css
+++ b/src/tips.css
@@ -4,10 +4,46 @@
 .media-body {
 	padding-left: 5px;
 	padding-right: 5px;
+	padding-top: 5px;
 	color: black;
 }
 
 .school-title {
 	padding-bottom: 10px;
 	color: black;
+}
+
+.media-content {
+	margin-top: 15px;
+	padding-bottom: 40px; border-bottom-style : solid;
+	border-color: black;
+	border-width: 1px;
+	border-bottom-style: solid;
+}
+
+#like-button {
+	background-image: url("images/thumbs-up.png");
+	background-size: 30px 30px;
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	float: right;
+	margin-left: 10px;
+}
+
+#dislike-button {
+	background-image: url("images/thumbs-down.png");
+	background-size: 30px 30px;
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	float: right;
+	margin-left: 10px;
+}
+
+.btn:hover {
+	box-shadow: 1px 3px 4px 1px rgba(0, 0, 0, 0.24), 0 2px 3px 0
+		rgba(0, 0, 0, 0.19);
 }
