Changed the sign up form and added php file to insert form data into a mysql database

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,8 @@
 }
 
 .middle-info {
-	color: white;
+	color: black;
+	margin-bottom: 20px;
 }
 
 /* Remove the navbar's default margin-bottom and rounded borders */
