Working on php to connect to database but no success made.
Added FindMySchool page.

Added FindMySchool css file.

--- a/src/tips.css
+++ b/src/tips.css
@@ -16,7 +16,7 @@
 /* This is where the icons, tips, and like/dislike buttons are contained */
 .media-content {
 	margin-top: 15px;
-	padding-bottom: 40px; border-bottom-style : solid;
+	padding-bottom: 40px;
 	border-color: black;
 	border-width: 1px;
 	border-bottom-style: solid;
