Worked on php. Got sign up form to put data into database. Also got tips page (tips.php) to get data from a database.

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,10 @@
 	margin-bottom: 20px;
 }
 
+.thanks-banner {
+	text-align: center;
+}
+
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
 	margin-bottom: 0;
