Added title icon.
Created a contact us page that puts comments and user info in a
database.

Made footer position absolute at the bottom.

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 .middle-info {
 	color: black;
 	margin-bottom: 20px;
+	height: 80%;
 }
 
 .thanks-banner {
@@ -41,7 +42,10 @@
 footer {
 	background-color: #555;
 	color: white;
-	padding: 25px;
+	padding: 20px;
+	width: 100%;
+	position: fixed;
+	bottom: 0;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
